# troglodite

./: .gitmodules  CMakeLists.txt  LICENCE  README.md
src/: main.cpp
src/shaders/: blit.frag.glsl  forward_unlit.frag.glsl  fullscreen.vert.glsl  model_stransform.vert.glsl  mvp_transform.vert.glsl  tri.vert.glsl  triangle.frag.glsl  triangle.vert.glsl
src/vulkan/: cache.h  descriptors.cpp  descriptors.h  engine.cpp  engine.h  material.cpp  material.h  mesh.cpp  mesh.h  pipeline_builder.cpp  pipeline_builder.h  renderpass.cpp  renderpass.h  samplers.cpp  samplers.h  scene.cpp  scene.h  texture.cpp  texture.h  types.h  vk_init_helpers.cpp  vk_init_helpers.h  vk_shader.cpp  vk_shader.h
